--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Привет мир</title>
 </head>
 <body>
-    <script src="./js/script-1.js" type="module"></script>
+    <!--<script src="./js/module5.js" type="module"></script>-->
+    <script src="./js/module6.js" type="module"></script>
 </body>
 </html>
